--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 :root {
-    --color-primary: #910A67;
-    --color-accent: #720455;
-    --color-secondary: #3C0753;
-    --color-background: #030637;
+    --color-primary: #F4EEE0;
+    --color-accent: #6D5D6E;
+    --color-secondary: #4F4557;
+    --color-background: #393646;
     --color-invicible: rgb(0,0,0,0);
     font-size: 20px;
 }
