--- a/src/style.css
+++ b/src/style.css
@@ -9,4 +9,41 @@
 
 body {
     background-color: var(--color-background);
+    min-height: 100vh;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-areas: 
+    ". . ."
+    ". form ."
+    ". . .";
+}
+
+form {
+    background-color: var(--color-primary);
+    border-radius: 10px;
+    padding: 10px;
+    grid-area: form;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 1fr);
+}
+
+.input-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.input-container > label {
+    place-self: center right;
+    padding-right: 10px;
+}
+
+.input-container > input, .input-container > select {
+    place-self: center stretch;
+    margin-left: 10px;
+    border-radius: 10px;
+    border: 2px solid var(--color-secondary);
+    background-color: whitesmoke;
 }
